Image resizer back-ported from Eugene game development kit 7.3.5

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -2424,9 +2424,10 @@ Multimedia API</a>. </big>
       7.3.5 – Small changes.<br>
       7.3.6 – Source code synced with Simple windows game framework 7.3.5.<br>
       7.3.7 – Image resizer improved.<br>
-      7.3.8 – 7.4 – Experemental branch.<br>
+      7.3.8 – 7.4 – Experimental branch.<br>
       7.4.1 – New subsystem added.<br>
       7.4.2 – 7.4.4 – Tile–map subsystem improved.<br>
+      7.4.5 – Image resizer back-ported from Eugene game development kit 7.3.5.<br>
     </big>
     <p></p>
     <big> </big>
