Image resizer improved

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -1976,7 +1976,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <big><br style="text-decoration: underline;">
       <span style="text-decoration: underline;"> Core classes</span><br>
       <br>
-      All engine core classes declared in <span style="font-style: italic;">Core</span>
+      All engine core classes and functions declared in <span style="font-style: italic;">Core</span>
       sub–namespace.<br>
       <br>
     </big> <big><span style="font-style: italic;"> FPS</span> implement fps
@@ -2428,6 +2428,8 @@ Multimedia API</a>. </big>
       7.4.1 – New subsystem added.<br>
       7.4.2 – 7.4.4 – Tile–map subsystem improved.<br>
       7.4.5 – Image resizer back-ported from Eugene game development kit 7.3.5.<br>
+      7.4.6 – Image resizer back-ported from Eugene game development kit 7.3.6.<br>
+      7.4.7 – 7.5 – Image resizer improved.<br>
     </big>
     <p></p>
     <big> </big>
