New subsystem added

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -43,13 +43,20 @@
           <li><a href="#mozTocId904725">Chapter 5. Image kind</a></li>
           <li><a href="#mozTocId738557">Chapter 6. Background</a></li>
           <li><a href="#mozTocId309905">Chapter 7. Base sprite subsystem</a></li>
-          <li><a href="#mozTocId662651"> Chapter 8. Ordinary sprites</a></li>
+          <li><a href="#mozTocId662651">Chapter 8. Ordinary sprites</a></li>
           <li><a href="#mozTocId146800">Chapter 9. Sprite sheet</a></li>
           <li><a href="#mozTocId752257">Chapter 10. Text</a></li>
           <li><a href="#mozTocId67980">Chapter 11. Loading images</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId64443">Part 4. Common things</a>
+      <li><a href="#mozTocId679144">Part 4. Transformation</a>
+        <ul>
+          <li><a href="#mozTocId833933">Chapter 1. The sub–namespace</a></li>
+          <li><a href="#mozTocId468222">Chapter 2. Cartesian coordinates and
+              screen coordinates.</a></li>
+        </ul>
+      </li>
+      <li><a href="#mozTocId64443">Part 5. Common things</a>
         <ul>
           <li><a href="#mozTocId597525">Chapter 1. The sub–namespace</a></li>
           <li><a href="#mozTocId853711">Chapter 2. Abnormal program termination</a></li>
@@ -58,29 +65,29 @@
           <li><a href="#mozTocId429738">Chapter 5. Tile–map</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId611237">Part 5. Other important things</a>
+      <li><a href="#mozTocId611237">Part 6. Other important things</a>
         <ul>
           <li><a href="#mozTocId648026">Chapter 1. The sub–namespace</a></li>
           <li><a href="#mozTocId909723">Chapter 2. Memory</a></li>
           <li><a href="#mozTocId950985">Chapter 3. Audio</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId209024">Part 6. Misc</a>
+      <li><a href="#mozTocId209024">Part 7. Misc</a>
         <ul>
           <li><a href="#mozTocId608755">Chapter 1. File system</a></li>
           <li><a href="#mozTocId59386">Chapter 2. Tools</a></li>
           <li><a href="#mozTocId573582">Chapter 3. Resource manager</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId590919"> Part 7. Binary files</a>
+      <li><a href="#mozTocId590919">Part 8. Binary files</a>
         <ul>
           <li><a href="#mozTocId200879">Chapter 1. The sub–namespace</a></li>
-          <li><a href="#mozTocId961921"> Chapter 2. Base binary file subsystem</a></li>
-          <li><a href="#mozTocId424835"> Chapter 3. File reader</a></li>
-          <li><a href="#mozTocId511135"> Chapter 4. File writer</a></li>
+          <li><a href="#mozTocId961921">Chapter 2. Base binary file subsystem</a></li>
+          <li><a href="#mozTocId424835">Chapter 3. File reader</a></li>
+          <li><a href="#mozTocId511135">Chapter 4. File writer</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId291572">Part 8. Input</a>
+      <li><a href="#mozTocId291572">Part 9. Input</a>
         <ul>
           <li><a href="#mozTocId783369">Chapter 1. The sub–namespace</a></li>
           <li><a href="#mozTocId685403">Chapter 2. Keyboard</a></li>
@@ -88,7 +95,7 @@
           <li><a href="#mozTocId861609">Chapter 4. Game–pad</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId309127">Part 9. Internal details of the engine
+      <li><a href="#mozTocId309127">Part 10. Internal details of the engine
           subsystems</a>
         <ul>
           <li><a href="#mozTocId383177">Chapter 1. A few words for a curious
@@ -319,6 +326,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       optimization.<br>
       <br>
       <span style="text-decoration: underline;"> Note for Visual C++ users</span><br
+
         style="text-decoration: underline;">
       <br>
       Disable pre–compiled headers before start compilation. Old Visual C++
@@ -863,10 +871,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       public methods.<br>
       <br>
     </big><big style="font-style: italic;"> unsigned int Sheet::get_row(</big><big
+
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return row of target frame.<br>
       <br>
       <span style="font-style: italic;"> unsigned int Sheet::get_column(</span></big><big
+
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return</big><big> column</big><big> </big><big>of
       target frame</big><big>.<br>
@@ -1079,8 +1089,54 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       You can use a wide range of graphics software to convert your images to
       the correct format. I recommend use <a href="https://www.gimp.org">GIMP</a>
       for doing it. It is a powerful image editor.<br>
+    </big>
+    <h1><a id="mozTocId679144" class="mozTocH1"></a><big>Part 4. Transformation</big></h1>
+    <big></big>
+    <h2><a id="mozTocId833933" class="mozTocH2"></a><big>Chapter 1. The
+        sub–namespace</big></h2>
+    <big>
+      All subsystems in this section declared in <span style="font-style: italic;">Transformation</span>
+      sub–namespace.<br>
+    </big>
+    <h2><a id="mozTocId468222" class="mozTocH2"></a><big>Chapter 2. Cartesian
+        coordinates and screen coordinates.</big></h2>
+    <big><span style="text-decoration: underline;">Cartesian coordinates</span><br>
+      <br>
+      Cartesian coordinates start at center of the screen. Look to this picture
+      to understand it.<br>
+      <br>
+      <img style="width: 107px; height: 111px;" alt="" src="cartesian_system.png"><br>
+      <br style="text-decoration: underline;">
+      <span style="text-decoration: underline;">Convert cartesian coordinates to
+        screen coordinates and convert screen coordinates to cartsian
+        coordinates.</span><br>
+      <br>
+      You can convert cartesian coordinates to screen coordinates. You can also
+      convert screen coordinates to cartesian coordinates.<br>
+      Just use <span style="font-style: italic;">Coordinates</span> for doing
+      it. Let's look at public methods.<br>
+      <br style="font-style: italic;">
+      <span style="font-style: italic;">void Coordinates::initialize(const int
+        viewport_width,const int viewport_height);</span> – Initialize the
+      subsystem.<br>
+      <br>
+      <span style="font-style: italic;">int Coordinates::get_screen_x(const int
+        x) const;</span> – Convert cartesian x-coordinate to screen
+      x-coordinate.<br>
+      <br style="font-style: italic;">
+      <span style="font-style: italic;">int Coordinates::get_screen_y(const int
+        x) const;</span> – Convert cartesian y-coordinate to screen
+      y-coordinate.<br>
+      <br>
+      <span style="font-style: italic;">int Coordinates::get_cartesian_x(const
+        int x) const;</span> – Convert screen x-coordinate to cartesian
+      x-coordinate.<br>
+      <br style="font-style: italic;">
+      <span style="font-style: italic;">int Coordinates::get_cartesian_y(const
+        int x) const;</span> – Convert screen y-coordinate to cartesian
+      y-coordinate.<br>
     </big> <big> </big>
-    <h1><a name="mozTocId64443" class="mozTocH1"></a><big>Part 4. Common things</big></h1>
+    <h1><a name="mozTocId64443" class="mozTocH1"></a><big>Part 5. Common things</big></h1>
     <h2><a name="mozTocId597525" class="mozTocH2"></a><big>Chapter 1. The
         sub–namespace</big></h2>
     <big>Almost all subsystems in this section declared in <span style="font-style: italic;">Common</span>
@@ -1212,7 +1268,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       int row,const unsigned int column</big><big><span style="font-style: italic;">)
         const;</span> – Return collision related information.<br>
     </big>
-    <h1><a name="mozTocId611237" class="mozTocH1"></a><big>Part 5. Other
+    <h1><a name="mozTocId611237" class="mozTocH1"></a><big>Part 6. Other
         important things</big></h1>
     <h2><a name="mozTocId648026" class="mozTocH2"></a><big>Chapter 1. The
         sub–namespace</big></h2>
@@ -1285,7 +1341,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="font-style: italic;"> bool Audio::check_playing();</span> –
       Return true if the sound resource is playing.</big><br>
     <big> </big>
-    <h1><a name="mozTocId209024" class="mozTocH1"></a><big>Part 6. Misc</big></h1>
+    <h1><a name="mozTocId209024" class="mozTocH1"></a><big>Part 7. Misc</big></h1>
     <h2><a name="mozTocId608755" class="mozTocH2"></a><big>Chapter 1. File
         system</big></h2>
     <big> File system subsystem implement as two simple functions. All these
@@ -1310,12 +1366,10 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Exit from your program and return user to operating system.<br>
       <br>
       <span style="font-style: italic;">bool enable_logging(const char *name); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Enable redirecting error messages to
       a log file and return false if the operation failed.<br>
       <br>
       <span style="font-style: italic;">void randomize(); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Initialize random number generator.<br>
       <br>
       <span style="font-style: italic;">unsigned int get_random(const int
@@ -1351,7 +1405,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       resource array if it already exists. This function takes resource array
       handle as argument.<br>
     </big>
-    <h1><a name="mozTocId590919" class="mozTocH1"></a><big> Part 7. Binary files</big></h1>
+    <h1><a name="mozTocId590919" class="mozTocH1"></a><big> Part 8. Binary files</big></h1>
     <h2><a name="mozTocId200879" class="mozTocH2"></a><big>Chapter 1. The
         sub–namespace</big></h2>
     <big>All subsystems in this section declared in <span style="font-style: italic;">File</span>
@@ -1411,7 +1465,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     </big> <big><i>void Output_File::flush();</i> – Force writing internal
       buffer data to the file.</big><br>
     <big> </big>
-    <h1><a name="mozTocId291572" class="mozTocH1"></a><big>Part 8. Input</big></h1>
+    <h1><a name="mozTocId291572" class="mozTocH1"></a><big>Part 9. Input</big></h1>
     <h2><a name="mozTocId783369" class="mozTocH2"></a><big>Chapter 1. The
         sub–namespace</big></h2>
     <big>All subsystems in this section declared in <span style="font-style: italic;">Input</span>
@@ -1943,7 +1997,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         Gamepad::get_right_stick_y() const;</span> – Return y–direction of right
       stick.<br>
     </big>
-    <h1><a name="mozTocId309127" class="mozTocH1"></a><big>Part 9. Internal
+    <h1><a name="mozTocId309127" class="mozTocH1"></a><big>Part 10. Internal
         details of the engine subsystems</big></h1>
     <big></big> <big> </big>
     <h2><a name="mozTocId383177" class="mozTocH2"></a><big>Chapter 1. A few
@@ -2430,6 +2484,9 @@ Multimedia API</a>. </big>
       7.4.5 – Image resizer back-ported from Eugene game development kit 7.3.5.<br>
       7.4.6 – Image resizer back-ported from Eugene game development kit 7.3.6.<br>
       7.4.7 – 7.5 – Image resizer improved.<br>
+      7.5 – New subsystem added.<br>
+      7.5.1 – Small changes.<br>
+      7.5.2 – Small bug fixed.<br>
     </big>
     <p></p>
     <big> </big>
