--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -52,8 +52,10 @@
       <li><a href="#mozTocId679144">Part 4. Transformation</a>
         <ul>
           <li><a href="#mozTocId833933">Chapter 1. The sub–namespace</a></li>
-          <li><a href="#mozTocId468222">Chapter 2. Cartesian coordinates and
-              screen coordinates.</a></li>
+          <li><a href="#mozTocId979980">Chapter 2. Cartesian coordinates and
+              screen coordinates</a></li>
+          <li><a href="#mozTocId462738">Chapter 3. Cartesian coordinates and
+              isometric coordinates</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId64443">Part 5. Common things</a>
@@ -326,7 +328,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       optimization.<br>
       <br>
       <span style="text-decoration: underline;"> Note for Visual C++ users</span><br
-
         style="text-decoration: underline;">
       <br>
       Disable pre–compiled headers before start compilation. Old Visual C++
@@ -371,8 +372,8 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <h2><a name="mozTocId312970" class="mozTocH2"></a><big>Chapter 1. Coordinate
         system</big></h2>
     <big><br>
-      The engine uses standard coordinate system. Coordinates start at top–left
-      corner. Look to this picture to understand it.<br>
+      The engine uses standard coordinate system by default. Coordinates start
+      at top–left corner. Look to this picture to understand it.<br>
       <br>
       <img style="width: 107px; height: 111px;" alt="" src="coordinate_system.png">
     </big>
@@ -1095,8 +1096,8 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <big> All subsystems in this section declared in <span style="font-style: italic;">Transformation</span>
       sub–namespace.<br>
     </big>
-    <h2><a id="mozTocId468222" class="mozTocH2"></a><big>Chapter 2. Cartesian
-        coordinates and screen coordinates.</big></h2>
+    <h2><a id="mozTocId979980" class="mozTocH2"></a><big>Chapter 2. Cartesian
+        coordinates and screen coordinates</big></h2>
     <big><span style="text-decoration: underline;">Cartesian coordinates</span><br>
       <br>
       Cartesian coordinates start at center of the screen. Look to this picture
@@ -1105,8 +1106,8 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <img style="width: 107px; height: 111px;" alt="" src="cartesian_system.png"><br>
       <br style="text-decoration: underline;">
       <span style="text-decoration: underline;">Cartesian coordinates to screen
-        coordinates conversion and convert screen coordinates to cartsian
-        coordinates conversion</span><br>
+        coordinates conversion and screen coordinates to cartsian coordinates
+        conversion</span><br>
       <br>
       You can convert cartesian coordinates to screen coordinates. You can also
       convert screen coordinates to cartesian coordinates.<br>
@@ -1148,6 +1149,43 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="font-style: italic;">int Coordinates::get_cartesian_y(const
         int x) const;</span> – Convert screen y-coordinate to cartesian
       y-coordinate.<br>
+    </big>
+    <h2><a id="mozTocId462738" class="mozTocH2"></a><big>Chapter 3. Cartesian
+        coordinates and isometric coordinates</big></h2>
+    <big><span style="text-decoration: underline;">A few words about isometric</span><br>
+      <br>
+      <a href="https://en.wikipedia.org/wiki/Isometric_projection">Isometric</a>
+      is very popular way for pseudo-3D games. Many old-school games are
+      isometric games.<br>
+      <br style="text-decoration: underline;">
+      <span style="text-decoration: underline;">Cartesian coordinates to
+        isometric coordinates conversion and isometric coordinates to cartsian
+        coordinates conversion</span><br>
+      <br>
+      You can convert cartesian coordinates to isometric coordinates. You can
+      also convert isometric coordinates to cartesian coordinates.<br>
+      Just use <span style="font-style: italic;">Isometric</span> class for
+      doing it. Let's look at public methods.<br>
+      <br>
+      <span style="font-style: italic;">int Isometric::get_isometric_x(const int
+        x,</span></big><big style="font-style: italic;">const int y</big><big><span
+        style="font-style: italic;">);</span> – Convert cartesian x-coordinate
+      to isometric x-coordinate.<br>
+      <br>
+      <span style="font-style: italic;">int Isometric::get_isometric_y(const int
+        x</span></big><big style="font-style: italic;">,</big><big style="font-style: italic;">const
+      int y</big><big><span style="font-style: italic;">);</span> – Convert
+      cartesian y-coordinate to isometric y-coordinate.<br>
+      <br>
+      <span style="font-style: italic;">int Isometric::get_cartesian_x(const int
+        x</span></big><big style="font-style: italic;">,</big><big style="font-style: italic;">const
+      int y</big><big><span style="font-style: italic;">);</span> – Convert
+      isometric x-coordinate to cartesian x-coordinate.<br>
+      <br style="font-style: italic;">
+      <span style="font-style: italic;">int Isometric::get_cartesian_y(const int
+        x,</span></big><big style="font-style: italic;">,</big><big style="font-style: italic;">const
+      int y</big><big><span style="font-style: italic;">);</span> – Convert
+      isometric y-coordinate to cartesian y-coordinate.<br>
     </big> <big> </big>
     <h1><a name="mozTocId64443" class="mozTocH1"></a><big>Part 5. Common things</big></h1>
     <h2><a name="mozTocId597525" class="mozTocH2"></a><big>Chapter 1. The
@@ -1195,7 +1233,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       &nbsp; <span style="font-style: italic;"> unsigned int y;</span><br style="font-style: italic;">
       &nbsp; <span style="font-style: italic;"> unsigned int width;</span><br style="font-style: italic;">
       &nbsp; <span style="font-style: italic;"> unsigned int height;</span><br
-
         style="font-style: italic;">
       <span style="font-style: italic;"> } BOX;</span><br>
       <br>
@@ -1278,6 +1315,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       – Get amount of maximum visible columns.<br>
       <br>
       <span style="font-style: italic;">EUGENEGDK::BOX Tilemap::get_box(</span></big><big
+
       style="font-style: italic;">const </big><big style="font-style: italic;">unsigned
       int row,const unsigned int column</big><big><span style="font-style: italic;">)
         const;</span> – Return collision related information.<br>
@@ -2416,7 +2454,8 @@ Multimedia API</a>. </big>
       6.2.9 – Small changes.<br>
       6.3 – Base sprite subsystem improved.<br>
       6.3.1 – 6.3.2 – Small changes.<br>
-      6.3.3 – Base graphics subsystem back-ported from Neon game development kit 5.8.4.<br>
+      6.3.3 – Base graphics subsystem back-ported from Neon game development kit
+      5.8.4.<br>
       6.3.4 – Visual C++ 2005 support added.<br>
       6.3.5 – Small changes.<br>
       6.3.6 – Ordinary sprite subsystem improved.<br>
@@ -2442,7 +2481,8 @@ Multimedia API</a>. </big>
       6.5.9 – Small bug in game–pad subsystem fixed.<br>
       6.6 – Source code synced with Gray game development kit 2.2.7.<br>
       6.6.1 – Text drawing subsystem improved.<br>
-      6.6.2 – Simple sound subsystem back-ported from Neon game development kit 5.7.8.<br>
+      6.6.2 – Simple sound subsystem back-ported from Neon game development kit
+      5.7.8.<br>
       6.6.3 – Small bug in multimedia subsystem fixed.<br>
       6.6.4 – 6.6.6 – Small changes.<br>
       6.6.7 – Multimedia subsystem improved.<br>
@@ -2487,7 +2527,8 @@ Multimedia API</a>. </big>
       7.2.6 – 7.2.9 – Image resizer improved.<br>
       7.3 – 7.3.1 – Small changes.<br>
       7.3.2 – Small render bug fixed.<br>
-      7.3.3 – Animation subsystem back-ported from Eugene game development kit 5.6.2.<br>
+      7.3.3 – Animation subsystem back-ported from Eugene game development kit
+      5.6.2.<br>
       7.3.4 – Background subsystem improved.<br>
       7.3.5 – Small changes.<br>
       7.3.6 – Source code synced with Simple windows game framework 7.3.5.<br>
@@ -2502,6 +2543,8 @@ Multimedia API</a>. </big>
       7.5.2 – Small changes.<br>
       7.5.3 – Small bug fixed.<br>
       7.5.4 – Coordinates conversion subsystem improved.<br>
+      7.5.5 – New subsystem added.<br>
+      7.5.6 – 7.5.7 – Isometric subsystem improved.<br>
     </big>
     <p></p>
     <big> </big>
