Small bug in tile–map subsystem fixed

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -2565,6 +2565,7 @@ Multimedia API</a>. </big>
       7.5.9 – 7.6.1 – Isometric subsystem improved.<br>
       7.6.2 – Tile–map subsystem improved.<br>
       7.6.3 – Image resizer back-ported from Eugene game development kit 7.4.5.<br>
+      7.6.4 – Small bug in tile–map subsystem fixed.<br>
     </big>
     <p></p>
     <big> </big>
