Coordinates conversion subsystem improved

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -328,7 +328,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       optimization.<br>
       <br>
       <span style="text-decoration: underline;"> Note for Visual C++ users</span><br
-
         style="text-decoration: underline;">
       <br>
       Disable pre–compiled headers before start compilation. Old Visual C++
@@ -397,6 +396,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
+
         href="http://opengl.org">OPENGL</a> for render. Most modern video–card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -873,10 +873,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       public methods.<br>
       <br>
     </big><big style="font-style: italic;"> unsigned int Sheet::get_row(</big><big
+
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return row of target frame.<br>
       <br>
       <span style="font-style: italic;"> unsigned int Sheet::get_column(</span></big><big
+
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return</big><big> column</big><big> </big><big>of
       target frame</big><big>.<br>
@@ -1120,6 +1122,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         viewport_width,const int viewport_height);</span> – Initialize the
       subsystem.<br>
       <br>
+      <span style="font-style: italic;">int Coordinates::get_viewport_width()
+        const;</span> – Return view-port width in pixels.<br>
+      <br>
+      <span style="font-style: italic;">int Coordinates::get_viewport_height()
+        const;</span> – Return view-port height in pixels.<br>
+      <br>
       <span style="font-style: italic;">int
         Coordinates::get_lowest_cartesian_x() const;</span> – Return lowest
       allowable cartesian x-coordinate.<br>
@@ -1183,6 +1191,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       <span style="font-style: italic;">int Isometric::get_target_x(const int
         row,</span></big><big style="font-style: italic;">const int column</big><big><span
+
         style="font-style: italic;">);</span> – Get target cartesian
       x-coordinate from the row and column.<br>
       <br>
@@ -1237,6 +1246,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       &nbsp; <span style="font-style: italic;"> unsigned int y;</span><br style="font-style: italic;">
       &nbsp; <span style="font-style: italic;"> unsigned int width;</span><br style="font-style: italic;">
       &nbsp; <span style="font-style: italic;"> unsigned int height;</span><br
+
         style="font-style: italic;">
       <span style="font-style: italic;"> } BOX;</span><br>
       <br>
@@ -1332,7 +1342,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Return true if the column is valid.<br>
       <br>
       <span style="font-style: italic;">EUGENEGDK::BOX Tilemap::get_box(</span></big><big
-
       style="font-style: italic;">const </big><big style="font-style: italic;">unsigned
       int row,const unsigned int column</big><big><span style="font-style: italic;">)
         const;</span> – Return collision related information.<br>
@@ -1435,12 +1444,10 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Exit from your program and return user to operating system.<br>
       <br>
       <span style="font-style: italic;">bool enable_logging(const char *name); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Enable redirecting error messages to
       a log file and return false if the operation failed.<br>
       <br>
       <span style="font-style: italic;">void randomize(); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Initialize random number generator.<br>
       <br>
       <span style="font-style: italic;">unsigned int get_random(const int
@@ -2566,6 +2573,7 @@ Multimedia API</a>. </big>
       7.6.2 – Tile–map subsystem improved.<br>
       7.6.3 – Image resizer back-ported from Eugene game development kit 7.4.5.<br>
       7.6.4 – Small bug in tile–map subsystem fixed.<br>
+      7.6.5 – Coordinates conversion subsystem improved.<br>
     </big>
     <p></p>
     <big> </big>
